--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -77,7 +77,7 @@ jobs:
         env:
           SECRET_KEY: ${{ secrets.NEXT_PUBLIC_API_URL }}
         run: |
-          echo "Secret is $SECRET_KEY"
+          echo "Secret is ${{SECRET_KEY}}"
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
